force-app/main/default/objects/Case/fields/AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInfo__c</fullName>
    <label>AdditionalInfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>