force-app/main/default/objects/Case/fields/CaseSubtype__c.field-meta.xml
<CustomField>
    <fullName>CaseSubtype__c</fullName>
    <label>CaseSubtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CaseType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Subtype</valueSetName>
    </valueSet>
</CustomField>