force-app/main/default/objects/Case/fields/FinalResolution__c.field-meta.xml
<CustomField>
    <fullName>FinalResolution__c</fullName>
    <label>FinalResolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>