force-app/main/default/objects/Case/fields/InternalNotes__c.field-meta.xml
<CustomField>
    <fullName>InternalNotes__c</fullName>
    <label>InternalNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>