force-app/main/default/objects/Case/fields/RelatedProduct__c.field-meta.xml
<CustomField>
    <fullName>RelatedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedProduct</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>