force-app/main/default/objects/Case/fields/ResolutionDate__c.field-meta.xml
<CustomField>
    <fullName>ResolutionDate__c</fullName>
    <label>ResolutionDate</label>
    <type>Date</type>
</CustomField>