force-app/main/default/objects/Case/recordTypes/Case_Natural_Person.recordType-meta.xml
<RecordType>
    <fullName>Case_Natural_Person</fullName>
    <active>true</active>
    <businessProcess>Support Natural Person Process</businessProcess>
    <label>Case Natural Person</label>
</RecordType>