force-app/main/default/objects/Case/validationRules/VR_Case_ResolutionRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Case_ResolutionRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(Status, &quot;Closed&quot;),  OR(    ISBLANK(InternalNotes__c),    ISBLANK(FinalResolution__c),    ISBLANK(ResolutionDate__c)  ))</errorConditionFormula>
    <errorMessage>To close this Case, you must complete the Internal Notes, Final Resolution, and Resolution Date fields.</errorMessage>
</ValidationRule>